# novacoin-blockchain

./: README.md  index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json
backend/: Cargo.toml
backend/src/: api.rs  blockchain.rs  explorer.rs  main.rs  token.rs  transaction.rs
backend/src/src/: api.rs  blockchain.rs  main.rs  token.rs  transaction.rs
novacoin-blockchain/: .gitignore  README.md
novacoin-blockchain/backend/: Cargo.toml
novacoin-blockchain/backend/src/: api.rs  blockchain.rs  main.rs  token.rs  transaction.rs
novacoin-blockchain/frontend/: index.html  script.js  style.css
src/: App.tsx  index.css
src/abi/: NovaCoin.json
src/components/: ConnectWallet.tsx  MintForm.tsx  PortfolioChart.tsx  TokenStats.tsx  TransferForm.tsx  UserExplorer.tsx  WalletModal.tsx
src/styles/: theme.ts
src/types/: global.d.ts
src/utils/: contract.ts
