[package]
name = "novacoin-blockchain"  ← Updated name
version = "0.1.0"
edition = "2021"

[dependencies]  ← Now has all required dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }