[package]
name = "novacoin-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
sha2 = "0.10"
warp = { version = "0.4.1", features = ["server"] }
tokio = { version = "1.47.1", features = ["full"] }
